; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Mayaqua.c_GetCommandLineUniStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Mayaqua.c_GetCommandLineUniStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uni_cmdline = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetCommandLineUniStr() #0 {
  %1 = alloca i32*, align 8
  %2 = load i8*, i8** @uni_cmdline, align 8
  %3 = icmp eq i8* %2, null
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32* @UniCopyStr(i8* bitcast ([1 x i32]* @.str to i8*))
  store i32* %5, i32** %1, align 8
  br label %9

6:                                                ; preds = %0
  %7 = load i8*, i8** @uni_cmdline, align 8
  %8 = call i32* @UniCopyStr(i8* %7)
  store i32* %8, i32** %1, align 8
  br label %9

9:                                                ; preds = %6, %4
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i32* @UniCopyStr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
